# rrepos

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  libtypes.rlib
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: release.md  semantic.md
src/: config.rs  git.rs  github.rs  lib.rs  main.rs  runner.rs  util.rs
src/commands/: base.rs  clone.rs  init.rs  mod.rs  pr.rs  remove.rs  run.rs
src/config/: builder.rs  loader.rs  mod.rs  repository.rs  validation.rs
src/github/: api.rs  auth.rs  client.rs  mod.rs  types.rs
