[package]
name = "rrepos"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
walkdir = "2.4"
glob = "0.3"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
